Fixed overlapping issue

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -190,7 +190,6 @@
   background: #eee;
   margin: auto;
   padding: 15px 10px;
-  transform: perspective(1500px) rotateY(15deg);
   border-radius: 1rem;
   box-shadow: rgba(0, 0, 0, 0.25) 0px 25px 50px -12px;
   transition: transform 1s ease 0s;
